--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,16 @@ dependencies:
   bip340: ^0.0.3
   bitcoin_flutter: ^2.0.2
   web_socket_channel: ^1.2.0
+  hive: ^1.4.4+1
   hive_flutter: ^0.3.1
-  get: ^3.24.0
+  get: ^3.25.4
   crypto: ^2.1.5
   buffer: ^1.0.7
   flutter_spinkit: "^4.1.2"
   timeago: ^2.0.30
+  flutter_i18n: ^0.21.0-intl.nullsafety
+  pin_code_fields: ^6.1.0
+  flutter_overboard: ^1.1.5
 
 
   cupertino_icons: ^1.0.2
@@ -28,10 +32,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
+  hive_generator: ^0.8.2
+  build_runner: ^1.11.5
   
 dependency_overrides:
+  # https://github.com/dart-bitcoin/bip32-dart/issues/8 (applies to bitcoin_flutter)
   pointycastle: ^1.0.2
 
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    # i18n
+    - assets/i18n/
