--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   web_socket_channel: ^1.2.0
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
-  get: ^3.25.4
   crypto: ^2.1.5
   buffer: ^1.0.7
   flutter_spinkit: "^4.1.2"
@@ -24,9 +23,13 @@ dependencies:
   flutter_i18n: ^0.21.0-intl.nullsafety
   pin_code_fields: ^6.1.0
   flutter_overboard: ^1.1.5
+  flutter_translate: ^2.0.0
+  go_router: ^3.0.1
+  animated_bottom_navigation_bar: ^0.3.2
 
 
   cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
