--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,41 +6,40 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.1.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bip340: ^0.0.3
-  bitcoin_flutter: ^2.0.2
-  web_socket_channel: ^1.2.0
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
-  crypto: ^2.1.5
+  bip340:
+    git: https://github.com/fiatjaf/dart-bip340
+  bitcoin_flutter:
+    git: https://github.com/fusion44/bitcoin_flutter
+  web_socket_channel: ^2.1.0
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  crypto: ^3.0.1
   buffer: ^1.0.7
-  flutter_spinkit: "^4.1.2"
-  timeago: ^2.0.30
-  flutter_i18n: ^0.21.0-intl.nullsafety
-  pin_code_fields: ^6.1.0
-  flutter_overboard: ^1.1.5
-  flutter_translate: ^2.0.0
+  flutter_spinkit: ^5.1.0
+  timeago: ^3.1.0
+  flutter_i18n: ^0.31.1
+  pin_code_fields: ^7.3.0
+  flutter_overboard: ^3.1.1
+  flutter_translate: ^3.0.1
   go_router: ^3.0.1
   animated_bottom_navigation_bar: ^0.3.2
+  auto_size_text: ^3.0.0
+  hex: ^0.2.0
 
 
   cupertino_icons: ^1.0.2
-  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
-  hive_generator: ^0.8.2
-  build_runner: ^1.11.5
-  
-dependency_overrides:
-  # https://github.com/dart-bitcoin/bip32-dart/issues/8 (applies to bitcoin_flutter)
-  pointycastle: ^1.0.2
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
 
 flutter:
