--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   equatable: ^2.0.3
   cupertino_icons: ^1.0.2
   settings_ui: ^2.0.2
+  flutter_markdown: ^0.6.9
+  flutter_highlighter: ^0.1.1
   
 
 dev_dependencies:
@@ -50,3 +52,10 @@ flutter:
   assets:
     # i18n
     - assets/i18n/
+
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: assets/fonts/RobotoMono-Regular.ttf
+        - asset: assets/fonts/RobotoMono-Bold.ttf
+          weight: 700
