--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: fluestr
 description: A mobile client for the Nostr protocol
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 0.1.0+1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.17.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -37,7 +37,7 @@ dependencies:
   flutter_markdown: ^0.6.9
   flutter_highlighter: ^0.1.1
   material_design_icons_flutter: ^5.0.6595
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,10 +45,9 @@ dev_dependencies:
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
 
-
 flutter:
   uses-material-design: true
-  
+
   assets:
     # i18n
     - assets/i18n/
