--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,6 @@ dependencies:
   flutter_spinkit: ^5.1.0
   timeago: ^3.1.0
   flutter_i18n: ^0.31.1
-  pin_code_fields: ^7.3.0
-  flutter_overboard: ^3.1.1
   flutter_translate: ^3.0.1
   go_router: ^3.0.1
   animated_bottom_navigation_bar: ^0.3.2
@@ -37,6 +35,7 @@ dependencies:
   flutter_markdown: ^0.6.9
   flutter_highlighter: ^0.1.1
   material_design_icons_flutter: ^5.0.6595
+  flutter_animated_button: ^2.0.2
 
 dev_dependencies:
   flutter_test:
