--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   bitcoin_flutter:
     git: https://github.com/fusion44/bitcoin_flutter
   web_socket_channel: ^2.1.0
-  hive: ^2.0.5
-  hive_flutter: ^1.1.0
+  isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
   crypto: ^3.0.1
   buffer: ^1.0.7
   flutter_spinkit: ^5.1.0
@@ -41,8 +41,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
-  hive_generator: ^1.1.2
   build_runner: ^2.1.7
+  isar_generator: ^3.0.5
 
 flutter:
   uses-material-design: true
